// sass - add :hover under media query for desktop only to prevent UI from breaking on tablets

--- a/webapp/sass/views/dashboard/upload.scss
+++ b/webapp/sass/views/dashboard/upload.scss
@@ -71,8 +71,13 @@
   border-bottom: 1px solid $color-border-light-grey;
   position: relative;
 
-  &.active, &:hover{
+  &.active{
     background: $color-global-yellow;
+  }
+  @media (min-width:1025px) { //hover only on desktop breakpoint
+    &:hover {
+      background: $color-global-yellow;
+    }
   }
 }
 
